# md-template

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
mdtemplate/table/: __init__.py
mdtemplate/table/presets/: scoop.py  userscripts.py
mdtemplate/tests/: test_repo.py
mdtemplate/utils/: repo.py
