[metadata]
name = md-template
author = Joshua Cowie-Willox
author_email = joshwillox@gmail.com
url = https://github.com/jcwillox/md-template

license = MIT
license_files = LICENSE
platforms = any

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
exclude = tests, tests.*
